[tool.poetry]
name = "psyai-async"
version = "0.1.0"
description = ""
authors = ["Oleksiy Levkovskyy <lex@sojourns.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
falcon = "^3.1.3"
httpx = "^0.25.0"
gunicorn = "^22.0.0"
uvicorn = "^0.29.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
supabase = "^2.4.5"
openai = "^1.26.0"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
google-generativeai = "^0.5.2"
supabase-py-async = "^2.5.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
