[tool.poetry]
name = "psyai-async"
version = "0.1.0"
description = ""
authors = ["Oleksiy Levkovskyy <lex@sojourns.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
falcon = "^3.1.3"
gunicorn = "^22.0.0"
uvicorn = "^0.29.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
supabase = "^2.4.5"
openai = "1.45.01"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
google-generativeai = "^0.5.2"
cloudscraper = "^1.2.71"
beautifulsoup4 = "^4.12.3"
pymongo = "^4.8.0"
sentence-transformers = "^3.1.1"
einops = "^0.8.0"
aiohttp = "^3.10.5"
cohere = "^5.9.4"
tavily-python = "^0.5.0"
langgraph = "^0.2.28"
motor = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
